Linear, Logistic Regression

--- a/k-NN.ipynb
+++ b/k-NN.ipynb
@@ -392,7 +392,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -408,6 +410,15 @@
     "print('Predicted label: \\t', results)\n",
     "print(\"Neighbor's label: \\t\", neighbor)\n",
     "print(\"Distance to neighbor: \\t\", dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# label의 카테고리는 1이다. 가장 가까운 데이터는 카테고리 1이다. 가장 가까운 데이터와의 거리는 250이다 "
    ]
   },
   {
